# SDL_kitchensink

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  SECURITY.md  _r_e_a_d_m_e_8md.html  _s_e_c_u_r_i_t_y_8md.html  annotated.html  classes.html  dir_2c76b4d78b318f7690c4c8bf7a531611.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  generate-docs.sh  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  kitchensink_8h.html  kitchensink_8h_source.html  kitcodec_8h.html  kitcodec_8h_source.html  kitconfig_8h.html  kitconfig_8h_source.html  kiterror_8h.html  kiterror_8h_source.html  kitformat_8h.html  kitformat_8h_source.html  kitlib_8h.html  kitlib_8h_source.html  kitplayer_8h.html  kitplayer_8h_source.html  (+17 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmake/: FindSDL2.cmake  Findass.cmake  Findcunit.cmake  Findffmpeg.cmake
doc/: enum_Kit_HintType.rst  enum_Kit_PlayerState.rst  enum_Kit_StreamType.rst  global.rst  struct_Kit_Codec.rst  struct_Kit_OutputFormat.rst  struct_Kit_Player.rst  struct_Kit_PlayerInfo.rst  struct_Kit_PlayerStreamInfo.rst  struct_Kit_Source.rst  struct_Kit_SourceStreamInfo.rst  struct_Kit_Version.rst
examples/: example_audio.c  example_bench.c  example_complex.c  example_cust_video.c  example_custom.c  example_play.c  example_rawdump.c  example_rwops.c  example_simple.c  example_video.c
include/kitchensink/: kitchensink.h  kitcodec.h  kitconfig.h  kiterror.h  kitformat.h  kitformats.h  kitlib.h  kitplayer.h  kitsource.h  kitutils.h
include/kitchensink/internal/: kitaudio.h  kitbuffer.h  kitbufferindex.h  kitcontrol.h  kitdecoder.h  kitdecoderthread.h  kitdemuxer.h  kitdemuxerthread.h  kitlibstate.h  kitlist.h  kitlog.h  kitpacketbuffer.h  kitringbuffer.h  kitsubtitle.h  kittimer.h  kitvideo.h  libass.h
include/kitchensink/internal/audio/: kitaudio.h  kitaudiopacket.h  kitaudioutils.h
include/kitchensink/internal/subtitle/: kitatlas.h  kitsubtitle.h  kitsubtitlepacket.h
include/kitchensink/internal/subtitle/renderers/: kitsubass.h  kitsubimage.h  kitsubrenderer.h
include/kitchensink/internal/utils/: kitbuffer.h  kithelpers.h  kitlog.h
include/kitchensink/internal/video/: kitvideo.h  kitvideoutils.h
include/kitchensink2/: kitchensink.h  kitcodec.h  kiterror.h  kitformat.h  kitlib.h  kitplayer.h  kitsource.h  kitutils.h
include/kitchensink2/internal/: kitbufferindex.h  kitdecoder.h  kitdecoderthread.h  kitdemuxer.h  kitdemuxerthread.h  kitlibstate.h  kitpacketbuffer.h  kitpackettag.h  kittimer.h  libass.h
include/kitchensink2/internal/audio/: kitaudio.h  kitaudioutils.h
include/kitchensink2/internal/subtitle/: kitatlas.h  kitsubtitle.h  kitsubtitlepacket.h
include/kitchensink2/internal/subtitle/renderers/: kitsubass.h  kitsubimage.h  kitsubrenderer.h
include/kitchensink2/internal/utils/: kithelpers.h  kitlog.h
include/kitchensink2/internal/video/: kitvideo.h  kitvideoutils.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_2.js  functions_0.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  variables_c.js  variables_e.js
src/: kitaudio.c  kitbuffer.c  kitchensink.c  kitcontrol.c  kitdecoder.c  kiterror.c  kitformat.c  kithelpers.c  kitlib.c  kitlibstate.c  kitlist.c  kitplayer.c  kitringbuffer.c  kitsource.c  kitsubtitle.c  kitutils.c  kitvideo.c
src/internal/: kitaudio.c  kitdecoder.c  kitdecoderthread.c  kitdemuxer.c  kitdemuxerthread.c  kithelpers.c  kitlibstate.c  kitpacketbuffer.c  kitsubtitle.c  kittimer.c  kitvideo.c  libass.c
src/internal/audio/: kitaudio.c  kitaudiopacket.c  kitaudioutils.c
src/internal/subtitle/: kitatlas.c  kitsubtitle.c  kitsubtitlepacket.c
src/internal/subtitle/renderers/: kitsubass.c  kitsubimage.c  kitsubrenderer.c
src/internal/utils/: kitbuffer.c  kithelpers.c  kitringbuffer.c
src/internal/video/: kitvideo.c  kitvideoutils.c
tests/: test_source.c
travis/: deps.sh  ffmpeg.sh  make.sh  sdl2.sh
